Uses new Solr index with UI improvements.

--- a/src/main/resources/static/css/main.less
+++ b/src/main/resources/static/css/main.less
@@ -217,7 +217,6 @@ div.content {
   }
 
   h2 {
-    padding-top: 20px;
     padding-bottom: 0;
   }
 
@@ -241,8 +240,19 @@ div.content {
     border: none;
   }
 
+  .loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../images/gears.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: 0.8;
+  }
+
   .section {
-    padding-top: 50px;
+    padding-top: 0px;
   }
 
   .box {
