--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -185,7 +185,6 @@ div.content h6 {
   color: #a01d28;
 }
 div.content h2 {
-  padding-top: 20px;
   padding-bottom: 0;
 }
 div.content p {
@@ -194,8 +193,18 @@ div.content p {
 div.content .no-border {
   border: none;
 }
+div.content .loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('../images/gears.gif') 50% 50% no-repeat #f9f9f9;
+  opacity: 0.8;
+}
 div.content .section {
-  padding-top: 50px;
+  padding-top: 0px;
 }
 div.content .box {
   moz-border-radius: 10px;
@@ -585,3 +594,4 @@ div.dialog .dialog-header {
 div.dialog .dialog-body {
   padding: 2px 16px;
 }
+/*# sourceMappingURL=main.css.map */
