--- a/src/main/resources/static/css/main.less
+++ b/src/main/resources/static/css/main.less
@@ -488,6 +488,16 @@ div.content {
     .messagebox(@hilight, @contrast);
   }
 
+  .message {
+    .rounded-corners(5px, @hilight);
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    font-size: 14pt;
+    color: white;
+    width: 100%;
+    background-color: #000000;
+  }
+
   .button(@c: @lighter) {
     .rounded-corners(5px, @c);
     text-decoration: none;
